--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -32,10 +32,11 @@ html
             = link_to "Admin", "/admin", class: "text-gray-800 font-semibold hover:text-gray-900 mr-4"
           - if user_signed_in?
             = link_to "Mi Espacio", public_dashboard_path, class: "text-gray-700 hover:underline"
+            = link_to "Favoritos", user_favorites_path(current_user.slug), class: "text-gray-700 hover:underline"
           - if user_signed_in?
             // Chat icon and dropdown
-            .relative.inline-block
-              button(type="button" data-action="dropdown#toggle" class="cursor-pointer rounded-full transition focus:outline-none p-2")
+            .relative.inline-block(data-dropdown-target="area" class="rounded-full transition-all duration-200 hover:bg-gray-100")
+              button(type="button" data-action="dropdown#toggle" data-dropdown-target="button" class="cursor-pointer rounded-full transition focus:outline-none p-2 w-full h-full")
                 - is_open = false
                 svg id="chatDropdownIcon" xmlns="http://www.w3.org/2000/svg" class="w-9 h-9 text-gray-700 transition" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                   path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M21 12c0 4.418-4.03 8-9 8a9.77 9.77 0 0 1-4-.8L3 20l.8-4A8.96 8.96 0 0 1 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
