--- a/app/views/messages/create.turbo_stream.slim
+++ b/app/views/messages/create.turbo_stream.slim
@@ -1,2 +1,3 @@
 = turbo_stream.append "messages", partial: "messages/message", locals: { message: @message }
 = turbo_stream.update "message_form", partial: "messages/form", locals: { conversation: @conversation, message: Message.new }
+= turbo_stream.action :invoke, "chat", "scrollToBottom"
