--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -11,6 +11,9 @@ section.flex.justify-center.items-center.min-h-screen.bg-neutral-100
         = f.email_field :email, autocomplete: "email", class: "rounded-xl px-5 py-4 w-full focus:ring-2 focus:ring-terracota focus:outline-none bg-neutral-200 text-granate placeholder:text-granate/60 border-0 shadow-none text-lg"
       .flex.flex-col.gap-2
         = f.label :password, "Contraseña", class: "text-sm font-semibold text-oliva mb-1"
+        - if @minimum_password_length
+          span.text-xs.text-gray-500 
+            | (mínimo #{@minimum_password_length} caracteres)
         = f.password_field :password, autocomplete: "new-password", class: "rounded-xl px-5 py-4 w-full focus:ring-2 focus:ring-terracota focus:outline-none bg-neutral-200 text-granate placeholder:text-granate/60 border-0 shadow-none text-lg"
       .flex.flex-col.gap-2
         = f.label :password_confirmation, "Confirmar contraseña", class: "text-sm font-semibold text-oliva mb-1"
