--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,6 +33,8 @@ html
           - if user_signed_in?
             = link_to "Mi Espacio", public_dashboard_path, class: "text-gray-700 hover:underline"
             = link_to "Proyectos", management_projects_path, class: "text-gray-700 hover:underline"
+            - if current_user.can_manage_clients?
+              = link_to "CRM", clients_path, class: "text-gray-700 hover:underline"
             = link_to "Facturas", invoices_path, class: "text-gray-700 hover:underline"
             = link_to "Calculadora", honorary_calculations_path, class: "text-gray-700 hover:underline"
             = link_to "Favoritos", user_favorites_path(current_user.slug), class: "text-gray-700 hover:underline"
