--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -19,4 +19,8 @@ section.max-w-3xl.mx-auto.bg-white.rounded-2xl.mb-8.p-8.mt-10.shadow-none.px-4.m
         svg.w-4.h-4.mr-2 fill="none" stroke="currentColor" viewBox="0 0 24 24"
           path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"
         | Documentos
+      = link_to timeline_project_path(@project), class: "px-6 py-2 rounded-full bg-purple-600 text-white font-semibold hover:bg-purple-700 transition flex items-center"
+        svg.w-4.h-4.mr-2 fill="none" stroke="currentColor" viewBox="0 0 24 24"
+          path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
+        | Timeline
       = link_to 'Volver', projects_path, class: "px-6 py-2 rounded-full bg-neutral-200 text-gray-700 font-semibold hover:bg-neutral-300 transition"
