--- a/app/views/invoices/index.html.slim
+++ b/app/views/invoices/index.html.slim
@@ -12,42 +12,38 @@
         | Nueva Factura
     
     / Estadísticas de facturación
-    .flex
-      .flex-1.p-6
-        .flex.items-center.justify-between
-          div
-            p.text-sm.font-medium.text-gray-500 Pendientes de Cobro
-            p.text-2xl.font-bold.text-yellow-600 = number_to_currency(@total_pending, unit: "€", precision: 0)
-          .w-12.h-12.bg-yellow-100.rounded-lg.flex.items-center.justify-center
-            svg.w-6.h-6.text-yellow-600 fill="currentColor" viewBox="0 0 20 20"
-              path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
-      
-      .flex-1.p-6
-        .flex.items-center.justify-between
-          div
-            p.text-sm.font-medium.text-gray-500 Cobradas
-            p.text-2xl.font-bold.text-green-600 = number_to_currency(@total_paid, unit: "€", precision: 0)
-          .w-12.h-12.bg-green-100.rounded-lg.flex.items-center.justify-center
-            svg.w-6.h-6.text-green-600 fill="currentColor" viewBox="0 0 20 20"
-              path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
-      
-      .flex-1.p-6
-        .flex.items-center.justify-between
-          div
-            p.text-sm.font-medium.text-gray-500 Total Facturas
-            p.text-2xl.font-bold.text-granate = @invoices.count
-          .w-12.h-12.bg-blue-100.rounded-lg.flex.items-center.justify-center
-            svg.w-6.h-6.text-blue-600 fill="currentColor" viewBox="0 0 20 20"
-              path d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM2 11a2 2 0 012-2h12a2 2 0 012 2v4a2 2 0 01-2 2H4a2 2 0 01-2-2v-4z"
-      
-      .flex-1.p-6
-        .flex.items-center.justify-between
-          div
-            p.text-sm.font-medium.text-gray-500 Vencidas
-            p.text-2xl.font-bold.text-red-600 = @overdue_count
-          .w-12.h-12.bg-red-100.rounded-lg.flex.items-center.justify-center
-            svg.w-6.h-6.text-red-600 fill="currentColor" viewBox="0 0 20 20"
-              path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd"
+    .flex.gap-6
+      .flex-1.p-6.bg-yellow-50.rounded-xl.flex.items-center.shadow-sm
+        .w-12.h-12.bg-yellow-100.rounded-lg.flex.items-center.justify-center.mr-4
+          svg.w-6.h-6.text-yellow-600 fill="currentColor" viewBox="0 0 20 20"
+            path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
+        div
+          p.text-sm.font-medium.text-gray-500 Pendientes de Cobro
+          p.text-2xl.font-bold.text-yellow-600 = number_to_currency(@total_pending, unit: "€", precision: 0)
+
+      .flex-1.p-6.bg-green-50.rounded-xl.flex.items-center.shadow-sm
+        .w-12.h-12.bg-green-100.rounded-lg.flex.items-center.justify-center.mr-4
+          svg.w-6.h-6.text-green-600 fill="currentColor" viewBox="0 0 20 20"
+            path d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"
+        div
+          p.text-sm.font-medium.text-gray-500 Cobradas
+          p.text-2xl.font-bold.text-green-600 = number_to_currency(@total_paid, unit: "€", precision: 0)
+
+      .flex-1.p-6.bg-blue-50.rounded-xl.flex.items-center.shadow-sm
+        .w-12.h-12.bg-blue-100.rounded-lg.flex.items-center.justify-center.mr-4
+          svg.w-6.h-6.text-blue-600 fill="currentColor" viewBox="0 0 20 20"
+            path d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM2 11a2 2 0 012-2h12a2 2 0 012 2v4a2 2 0 01-2 2H4a2 2 0 01-2-2v-4z"
+        div
+          p.text-sm.font-medium.text-gray-500 Total Facturas
+          p.text-2xl.font-bold.text-granate = @invoices.count
+
+      .flex-1.p-6.bg-red-50.rounded-xl.flex.items-center.shadow-sm
+        .w-12.h-12.bg-red-100.rounded-lg.flex.items-center.justify-center.mr-4
+          svg.w-6.h-6.text-red-600 fill="currentColor" viewBox="0 0 20 20"
+            path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd"
+        div
+          p.text-sm.font-medium.text-gray-500 Vencidas
+          p.text-2xl.font-bold.text-red-600 = @overdue_count
     
     / Lista de facturas
     .bg-white.rounded-xl.border.border-gray-100.overflow-hidden.shadow-sm
